--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.XpenseTrack"
         tools:targetApi="31">
         <activity
+            android:name=".add_transaction.AddTransactionActivity"
+            android:exported="false"
+            android:label="@string/title_activity_add_transaction"
+            android:theme="@style/Theme.XpenseTrack" />
+        <activity
             android:name=".home.HomeActivity"
             android:exported="true"
             android:label="@string/app_name"
